--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <a href="https://www.linkedin.com/in/hoang-quy-54a9241b0/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/quyhoangs" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://github.com/quyhoangs" class="github"><i class="bx bxl-gitlab"></i></a>
-        <a href="https://www.instagram.com/quyhoangs.sudo/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.instagram.com/quyhoangs" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://twitter.com/home" class="twitter"><i class="bx bxl-twitter"></i></a>
         <!--        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>-->
       </div>
