--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
               <h4>ENGINEERING </h4>
               <h5>2014 - 2019</h5>
               <p><em>HANOI UNIVERSITY OF TRANSPORT AND COMMUNICATIONS</em></p>
-              <p><strong>Course Work:</strong>  Construction Engineering.</p>
+<!--               <p><strong>Course Work:</strong>  Construction Engineering.</p> -->
               <p><strong>LANGUAGES :</strong> English B1 .</p> 
 
             </div>
