--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <div class="item">
                 <div class="work">
                   <div class="img d-flex align-items-end justify-content-center"
-                    style="background-image: url(carousel-03/images/MOR-Trip.jpg);">
+                    style="background-image: url(carousel-03/images/MOR-Trip.JPG);">
                     <div class="text w-100">
                       <span class="cat">MOR - TRIP </span>
                       <h3><a href="#">Gather to empower in Danang</a></h3>
