--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     style="background-image: url(carousel-03/images/Team-award.jpg);">
                     <div class="text w-100">
                       <span class="cat">End of year party </span>
-                      <h3><a href="#">The best project award in 2022 with colleagues</a></h3>
+                      <h3><a href="#">Year-end achievement with my team</a></h3>
                     </div>
                   </div>
                 </div>
