--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     style="background-image: url(carousel-03/images/work-2.jpg);">
                     <div class="text w-100">
                       <span class="cat">Ho Chi Minh City</span>
-                      <h3><a href="#"> Little People in the Big City </a></h3>
+                      <h3><a href="#">  </a></h3>
                     </div>
                   </div>
                 </div>
@@ -140,7 +140,7 @@
                     style="background-image: url(carousel-03/images/Mid-autum.jpg);">
                     <div class="text w-100">
                       <span class="cat">Mid autumn COVID-19</span>
-                      <h3><a href="#">Strongly defeat the covid 19 pandemic</a></h3>
+                      <h3><a href="#"></a></h3>
                     </div>
                   </div>
                 </div>
@@ -151,7 +151,7 @@
                     style="background-image: url(carousel-03/images/MOR-Marathon.jpg);">
                     <div class="text w-100">
                       <span class="cat">MOR Marathon</span>
-                      <h3><a href="#">Win 3rd prize guys = )) </a></h3>
+                      <h3><a href="#"> </a></h3>
                     </div>
                   </div>
                 </div>
