--- a/index.html
+++ b/index.html
@@ -347,16 +347,16 @@
   localStorage.setItem('count', count);
   document.getElementById('count').innerHTML = count;
                               
-<!--   const countEl = document.getElementById('count');
+  //  const countEl = document.getElementById('count');
 
-  updateVisitCount();
+  // updateVisitCount();
 
-  function updateVisitCount() {
-    fetch('https://api.countapi.xyz/hit/quyhoangs/key')
-    .then(res => res.json())
-    .then(res => {
-      countEl.innerHTML = res.value;
-    })
-  } -->
+  // function updateVisitCount() {
+  //   fetch('https://api.countapi.xyz/hit/quyhoangs/key')
+  //   .then(res => res.json())
+  //   .then(res => {
+  //     countEl.innerHTML = res.value;
+  //   })
+  // } 
 
 </script>
