--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Quy Hoang</h3>
-      <p>Middle PHP</p>
+      <p>Backend Developer</p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/hoang-quy-54a9241b0/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/quyhoangs" class="github"><i class="bx bxl-github"></i></a>
