--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <h1>Hi, I'm Quy Hoang </h1>
       <p>I'm <span class="typed" data-typed-items=" Software Developer, Programmer, Photographer,Aspire to be a Full-Stack Developer"></span></p>
       <div class="social-links">
-        <a href="https://www.linkedin.com/in/hoang-quy-54a9241b0/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/hoang-quy-54a9241b000/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/quyhoangs" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://github.com/quyhoangs" class="github"><i class="bx bxl-gitlab"></i></a>
         <a href="https://www.instagram.com/quyhoangs" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -117,8 +117,8 @@
                   <div class="img d-flex align-items-end justify-content-center"
                     style="background-image: url(carousel-03/images/MOR-Trip.JPG);">
                     <div class="text w-100">
-                      <span class="cat">MOR - TRIP </span>
-                      <h3><a href="#">Gather to empower in Danang</a></h3>
+                      <span class="cat">Danang : MOR - TRIP </span>
+                    
                     </div>
                   </div>
                 </div>
@@ -247,10 +247,10 @@
       <h3>Quy Hoang</h3>
       <p>Backend Developer</p>
       <div class="social-links">
-        <a href="https://www.linkedin.com/in/hoang-quy-54a9241b0/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://github.com/quyhoangs" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://github.com/quyhoangs" class="github"><i class="bx bxl-gitlab"></i></a>
-        <a href="https://www.instagram.com/quyhoangs.sudo/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/hoang-quy-54a9241b000/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/quyhoangss" class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://github.com/quyhoangss" class="github"><i class="bx bxl-gitlab"></i></a>
+        <a href="https://www.instagram.com/quyhoangss.sudo/" class="instagram"><i class="bx bxl-instagram"></i></a>
       </div>
  <!--     <div class="copyright">
       </div>-->
