--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
       <h1>Hi, I'm Quy Hoang </h1>
       <p>I'm <span class="typed" data-typed-items=" Software Developer, Programmer, Photographer,Aspire to be a Full-Stack Developer"></span></p>
       <div class="social-links">
-        <a href="https://www.linkedin.com/in/hoang-quy-54a9241b000/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://github.com/quyhoangs" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://github.com/quyhoangs" class="github"><i class="bx bxl-gitlab"></i></a>
-        <a href="https://www.instagram.com/quyhoangs" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/hoang-quy-54a9241b0001/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/quyhoangs1" class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://github.com/quyhoangs1" class="github"><i class="bx bxl-gitlab"></i></a>
+        <a href="https://www.instagram.com/quyhoangs1" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://twitter.com/home" class="twitter"><i class="bx bxl-twitter"></i></a>
         <!--        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>-->
       </div>
