--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Hi, I'm Quy Hoang </h1>
-      <p>I'm <span class="typed" data-typed-items=" Software Developer, Programmer, Photographer,Aspire to be a Full-Stack Developer"></span></p>
+      <p>I'm <span class="typed" data-typed-items=" Coffee Brewing Master, Code Connoisseur, Bug Buster, and Aspiring Full-Stack Sorcerer"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/hoang-quy-54a9241b0001/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/quyhoangs1" class="github"><i class="bx bxl-github"></i></a>
