--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
     <body>
       <div  class="col-lg-2 col-md-6 mt-5 mt-md-0 topleft" >
         <div class="count-box">
-          <i class="icofont-eye-alt"></i> Visited :
-          <span   id="count" data-toggle="counter-up"> <h1 >0</h1></span>
+          <i class="icofont-eye-alt"></i>
+          <span>
+            <script id="_waurcp">var _wau = _wau || []; _wau.push(["small", "i2rek3o4oz", "rcp"]);
+            </script><script async src="//waust.at/s.js"></script>            
+          </span>
         </div>
       </div>
 
@@ -259,8 +262,7 @@
 
   <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
   <div id="preloader"></div>
-
-  <!-- Vendor JS Files -->
+  
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
@@ -288,17 +290,5 @@
  count++;
   localStorage.setItem('count', count);
   document.getElementById('count').innerHTML = count;
-                              
-  //  const countEl = document.getElementById('count');
-
-  // updateVisitCount();
-
-  // function updateVisitCount() {
-  //   fetch('https://api.countapi.xyz/hit/quyhoangs/key')
-  //   .then(res => res.json())
-  //   .then(res => {
-  //     countEl.innerHTML = res.value;
-  //   })
-  // } 
 
 </script>
